song.css
:root {
  --pf-modal-max-width: none;
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}



body {
  font-family: "Noto Sans", sans-serif;
  font-optical-sizing: auto;
  font-weight: 350;
  font-style: normal;
  font-variation-settings:
    "wdth" 62.5;

  background: #f5f5f5;
  color: #222;

  display: flex;
  justify-content: center;
  align-items: flex-start;

  min-height: 100vh;
  padding: 20px;
}

.song-header {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: baseline;
  gap: 10px;

  border-bottom: 1px solid #ddd;
  padding-bottom: 10px;
  margin-bottom: 15px;
  padding-left: 20px;
  padding-right: 20px;
}

.search-container {
  position: fixed;
  top: 0;
  left: 0;
  padding: 10px 15px;
  z-index: 1000;
  transition: transform 0.3s ease;
}

.song-title {
  font-size: 1.4rem;
  line-height: 1.3;
}

.song-author {
  font-size: 0.95rem;
  color: #666;
  white-space: nowrap;
}

.transpose-controls {
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;

  margin-bottom: 15px;
}

.transpose-controls button {
  padding: 6px 12px;
  font-size: 1rem;
  border: solid 1px #1a4fd1;
  border-radius: 6px;
  color: #1a4fd1;
  background-color: white;
  cursor: pointer;
}

.transpose-controls button:hover {
  background-color: #8daaf4;
  color: white;
}

.transpose-controls button:active {
  transform: scale(0.96);
}

#transpose-value {
  min-width: 25px;
  text-align: center;
  font-weight: 600;
}

.pf-trigger-btn {
  width: 100%;
  box-sizing: border-box;
}


.song-container {
  width: 100%;
  max-width: 700px;
  background: #fff;
  padding-left: 10px;
  padding-right: 10px;
  padding-top: 20px;
  padding-bottom: 20px;
  border-radius: 12px;
  box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
  display: flex;
  flex-direction: column;
  align-items: center;
}

.song-table {
  width: 100%;
  border-collapse: collapse;
}

.chords {
  min-width: 50px;
}

.song-table tr {
  border-bottom: 1px solid #eee;
}

.song-table td {
  padding: 8px 6px;
  vertical-align: top;
}

.search-container.hide {
  transform: translateY(-150%);
}

.song-table .lyrics {
  width: 65%;
  word-wrap: break-word;
}

.song-table .chords {
  width: 35%;
  text-align: right;
}

.chord:first-child {
  margin-left: 10px;
}

.chord {
  display: inline-block;
  color: #1a4fd1;
  font-weight: 600;
}

@media (max-width: 720px) {
  body {
    padding: 0px;
    display: flex;
    flex-direction: column;
  }

  .search-container {
    top: 0;
    left: 0;
    width: 100%;
    height: 55px;
    background: #fff;

    position: relative;
    z-index: 1000;
    display: flex;
    align-items: center;
    flex-direction: column;
  }

  .search-container.hide {
    transform: none;
  }

  .song-container {
    border-radius: 0;
    max-width: none;
    width: 100%;
  }
}

